<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CountDown</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="text1">设置时间：</string>
    <string name="text2">00</string>
    <string name="text3">:</string>
    <string name="btn_1">确定</string>
    <string name="btn_2">开始计时</string>
    <string name="btn_3">结束计时</string>
    <string name="minute">分</string>
    <string name="second">秒</string>
    <string name="title">计 时 器</string>

</resources>