<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:text="@string/title"
        android:textColor="#ffd"
        android:textSize="40sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text1"
            android:textColor="#fff"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edit_input_minute"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:inputType="number"
            android:textColor="#fff"
            android:textSize="40sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/minute"
            android:textColor="#fff"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/edit_input_second"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:inputType="number"
            android:textColor="#fff"
            android:textSize="40sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/second"
            android:textColor="#fff"
            android:textSize="25sp" />
    </LinearLayout>

    <Button
        android:id="@+id/button1"
        android:layout_width="match_parent"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_1"
        android:textColor="#fff" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/text_show_minute"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#000"
            android:text="@string/text2"
            android:textColor="#fff"
            android:textSize="120sp" />

        <TextView
            android:id="@+id/text_maohao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#000"
            android:text="@string/text3"
            android:textColor="#fff"
            android:textSize="120sp" />

        <TextView
            android:id="@+id/text_show_second"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#000"
            android:text="@string/text2"
            android:textColor="#fff"
            android:textSize="120sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="100dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal" >

        <Button
            android:id="@+id/button_start"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="top"
            android:layout_marginLeft="15dp"
            android:background="@drawable/bfzn_004" />

        <Button
            android:id="@+id/button_pause"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginLeft="15dp"
            android:background="@drawable/bfzn_003" />

        <Button
            android:id="@+id/button_stop"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginLeft="15dp"
            android:background="@drawable/bfzn_006" />
    </LinearLayout>

</LinearLayout>